# game

./: .gitignore  Cargo.toml
.sqlx/: query-049c4c31a3031d3ef3069230b6100316057645a388fcf4e3ba97d0421074eac7.json  query-110c1d508af8a51c2a1be920a64bb3821f54591f2e8593cab163cb0706cb2abf.json  query-6692a0e4a374275b49c10f4db74505e95dec0d8fa3881f76b94e15f3d01aacb6.json  query-7b1a152a2c987e7cd77a82e365f9d15088d4dc9aecd36e2e69c9c5f27734ed2d.json  query-a9515dc77e1f4d7ecb8a51961b9b3fda590cf6baf4a854f5d33998d77af08b7c.json  query-c35ce858297b88fe8b90a8da3bad016f3a5afa898c1e4394d479a196cff77a65.json  query-da4771e526804288346316a0e656b080ad3d227a1f6c3f7c084ee1145e278157.json  query-e3d46067af2304caf495d8607d16735926d8201f954afcf1971439ae86217c33.json  query-e89e2c31639fbdae53f0b150c585bd292b391ee6079d7dc099263483683477ca.json  query-eba76f79e6184e0fad26439ae673b452560b3782c99f857159018ff584ce7903.json
assets/: inventory.aseprite  items.aseprite  textures.aseprite
assets/shaders/: array_texture.wgsl  voxel.wgsl
migrations/: 0001_setup.sql
src/: aabb.rs  assets.rs  block.rs  chunk.rs  game_state.rs  inventory.rs  item.rs  level.rs  loader.rs  main.rs  physics.rs  player.rs  position.rs  texture_array.rs  ui.rs  voxel_material.rs  voxel_mesh.rs  world.rs
src/level/: generator.rs
src/player/: cursor.rs  interaction.rs  inventory.rs  movement.rs
src/ui/: hud.rs  inventory_menu.rs  item_image_cache.rs  pause_menu.rs
