[package]
name = "defaria"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.15.1"
bevy-tokio-tasks = "0.15.0"
bevy_asset_loader = "0.22.0"
bincode = "1.3.3"
itertools = "0.14.0"
noise = "0.9.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.dev]
opt-level = 1
